# DrandallCode

./: LICENSE.md  README.md
Cpp/: .clang-format  .gitignore  CMakeLists.txt  CmakeLists.txt  CppVsCodeWorkspace.code-workspace  ForzaDefines.txt  README.md
Cpp/AdventOfCode/Inputs/2016/: d22.txt
Cpp/AdventOfCode/Inputs/2018/: d14.txt  d22.txt
Cpp/AdventOfCode/Inputs/2019/: d17.txt  d25.txt
Cpp/AdventOfCode/Inputs/2023/: d12.txt
Cpp/AdventOfCode/inc/: AStar.h  All.h  BoilerPlate.h  Circuit.h  Common.h  Coord.h  EggnogStorage.h  EscapedStrings.h  Facing.h  HexGrid.h  JsAbacus.h  KnightsOfDinner.h  LightWar.h  LightWar2.h  NextPass.h  SantaElevator.h  Utils.h  md5Constexpr.h  md5Contexpr.h  pch.h
Cpp/AdventOfCode/inc/2015/: All.h  AuntSue.h  BossBattle.h  BossBattle2.h  ElfDelivery.h  ElfWrappingPaper.h  NiceString.h  TuringLock.h  d10_SeeAndSay.h  d11_NextPass.h  d12_JsAbacus.h  d13_KnightsOfDinner.h  d14_ReindeerRaces.h  d15_PerfectCookie.h  d16_AuntSue.h  d17_EggnogStorage.h  d18_LightWar2.h  d19_RudolfReactor.h  d1_SantaElevator.h  d20_ElfDelivery.h  d21_BossBattle.h  d22_BossBattle2.h  d23_TuringLock.h  d24_SledBalance.h  d25_SecretCode.h  d2_ElfWrappingPaper.h  d3_AtLeastOnePresent.h  d4_AdventCoins.h  d5_NiceString.h  d6_LightWar.h  d7_Circuit.h  d8_EscapedStrings.h  d9_SingleNight.h
Cpp/AdventOfCode/inc/2016/: All.h  Assembunny.h  BathroomSecurity.h  CubeFarm.h  DecoyRoom.h  DoorPass.h  DragonChecksum.h  Firewall.h  Generators.h  IpV7.h  OneTimePad.h  RepeatSignal.h  TFA.h  Traps.h  Vault.h  WinCapsule.h  d10_BalanceBots.h  d11_Generators.h  d12_Assembunny.h  d13_CubeFarm.h  d14_OneTimePad.h  d15_WinCapsule.h  d16_DragonChecksum.h  d17_Vault.h  d18_Traps.h  d19_WhiteElephant.h  d1_GridSearch.h  d20_Firewall.h  d21_Scrambler.h  d22_GridComputing.h  d23_SafeCrack.h  d24_AirDucts.h  d25_ClockSignal.h  d2_BathroomSecurity.h  d3_TriangleSquare.h  d4_DecoyRoom.h  d5_DoorPass.h  d6_RepeatSignal.h  d7_IpV7.h  d8_TFA.h  (+1 more)
Cpp/AdventOfCode/inc/2017/: All.h  KnotHash.h  d10_KnotHash.h  (+24 more)
Cpp/AdventOfCode/src/: AStar.test.cpp  Common.cpp  main.cpp
Cpp/CommandParser/: CMakeLists.txt  CmakeLists.txt
Cpp/CommandParser/src/: CommandSplitter.cpp  Option.cpp  OptionCollection.cpp  Usage.cpp
Cpp/CommandParserTest/: CMakeLists.txt  CmakeLists.txt
Cpp/CommandParserTest/inc/: TestCommon.h
Cpp/CommandParserTest/src/: CommandSplitter.test.cpp  Option.test.cpp  OptionCollection.test.cpp
Cpp/Core/: CMakeLists.txt
Cpp/Core/inc/: BigInt.h  BigInt.inl  BigInt.natvis
Cpp/Core/src/: BigInt.cpp
Cpp/CoreTest/: CMakeLists.txt
Cpp/CoreTest/inc/: TestCommon.h
Cpp/CppKata/: CMakeLists.txt
Cpp/CppKata/inc/: RomanNumeral.h
Cpp/CppKata/src/: RomanNumeral.cpp
Cpp/CppKataTest/: CMakeLists.txt
Cpp/CppKataTest/src/: RomanNumeral.test.cpp
Cpp/ExtractorLib/: CMakeLists.txt
Cpp/ExtractorLib/src/: FileNameCollector.cpp  IncludeMapGenerator.cpp
Cpp/ExtractorLibTest/: CMakeLists.txt
Cpp/ExtractorLibTest/inc/: TestCommon.h
Cpp/ExtractorLibTest/src/: BodyCount.test.cpp  CacheStore.test.cpp  CommentExtractor.test.cpp  DefineExtractor.test.cpp  DefineFileParser.test.cpp  FilePreProcessor.test.cpp  FunctionDataExtractor.test.cpp  IfDefExtractor.test.cpp  IncludeMapGenerator.test.cpp  LineFetcher.test.cpp  NamespaceExtractor.test.cpp  OperatorOverloadExtractor.test.cpp  SpecialFunctionExtractor.test.cpp  TypeDataExtractor.test.cpp  VisibilityExtractor.test.cpp
Cpp/GbellMidi/: CMakeLists.txt  passiton.midi  row.midi
Cpp/GbellMidi/inc/: Constants.h  LibConvertGdbMidiClass.h  MidiOut.h  Parse.h  Platform.h  Utils.h  libdefs.h  libmidiclass.h  midiclass.h
Cpp/GbellMidi/src/: Constants.cpp  LibMidiClass.cpp  classdefs.cpp  convertgdbmidiclass.cpp  libconvertgdbmidiclass.cpp  midiout.cpp  parse.cpp  returnstatus.cpp  utils.cpp
Cpp/IncludeCounter/: CMakeLists.txt
Cpp/IncludeCounter/Inc/: ArgParse.h  IncludeArgParse.h  IncludeCountTask.h  IncludeMapGenerator.h  IncludeReport.h  ResultGenerator.h
Cpp/IncludeCounter/Src/: ArgParse.cpp  FileNameCollector.cpp  IncludeArgParse.cpp  IncludeCountTask.cpp  IncludeCounterMain.cpp  IncludeMapGenerator.cpp  IncludeReport.cpp  Main.cpp  ResultGenerator.cpp
Cpp/IncludeCounterLib/: CMakeLists.txt
Cpp/IncludeCounterLib/src/: FileNameCollector.cpp  IncludeMapGenerator.cpp  IncludeReport.cpp  ResultGenerator.cpp
Cpp/IncludeCounterTest/: CMakeLists.txt
Cpp/IncludeCounterTest/src/: CommentExtractor.test.cpp  FunctionDataExtractor.test.cpp  IncludeMapGenerator.test.cpp  TypeDataExtractor.test.cpp  VisibilityExtractor.test.cpp
Cpp/OpenXLSX/headers/: XLCellValue.hpp  XLRowData.hpp
Cpp/OpenXLSX/sources/: XLCellReference.cpp  XLDocument.cpp  XLSheet.cpp  XLWorkbook.cpp
Cpp/ReportGenerator/: CMakeLists.txt
Cpp/ReportGenerator/src/: CsvReport.cpp  DetailedData.cpp  DotReport.cpp  DotToSvg.cpp  ExcelReport.cpp  SimpleData.cpp
Cpp/SampleModule/: CMakeLists.txt
Cpp/SampleModule/inc/: A.h  B.h  C.h  CurtisCode.h  CurtisCode2.h  NewStuff.h  OldStuff.h  Scratch1.h
Cpp/SampleModule/src/: AllStuff.cpp  scratch.cpp
Cpp/SampleModuleTest/: CMakeLists.txt
Cpp/ScratchExe/: CmakeLists.txt
Cpp/ScratchExe/Inc/: ArgParse.h  FileData.h  FileNameCollector.h  IncludeCountTask.h  ResultGenerator.h
Cpp/ScratchExe/Src/: FileNameCollector.cpp  IncludeMapGenerator.cpp  Main.cpp
Cpp/ScratchLib/: CMakeLists.txt  CmakeLists.txt
Cpp/ScratchLib/src/: HappyBirthday.cpp
Cpp/ScratchTest/: CMakeLists.txt  CmakeLists.txt
Cpp/ScratchTest/inc/: TestCommon.h
Cpp/TodoLib/: CMakeLists.txt
Cpp/TodoLib/src/: TodoReader.cpp  TodoReport.cpp
Cpp/TodoLibTest/: CMakeLists.txt
Cpp/TodoLibTest/src/: TodoReader.test.cpp
Cpp/TodoManager/: CMakeLists.txt
Cpp/TodoManager/inc/: TodoArgParse.h
Cpp/TodoManager/src/: TodoArgParse.cpp  TodoManagerMain.cpp
Cpp/TypeCounter/: CMakeLists.txt
Cpp/TypeCounter/inc/: CombinedReport.h  FunctionReport.h  IReport.h  TypeArgParse.h  TypeReport.h
Cpp/TypeCounter/src/: CombinedReport.cpp  FunctionReport.cpp  Main.cpp  TypeArgParse.cpp  TypeCounterMain.cpp  TypeReport.cpp
gbell/MidiCode/MidiLib/: CMakeLists.txt
(+840 files in other folders)
